# pytest-build

./: CHANGES.rst  LICENSE  README.rst  setup.cfg
pytest_build/: plugin.py
