[metadata]
license_file = LICENSE
name = pytest-build
version = 0.1.dev0
url = https://github.com/astrofrog/pytest-build
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
classifiers =
	Development Status :: 4 - Beta
	Framework :: Pytest
	Intended Audience :: Developers
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
license = BSD
description = pytest plugin to help with building packages before testing
long_description = file: README.rst

[options]
packages = find:
install_requires =
	pytest

[options.entry_points]
pytest11 =
	pytest_build = pytest_build.plugin
